[tool.poetry]
name = "badge-server"
version = "0.1.0"
description = ""
authors = ["Sorawit Suriyakarn <thepsint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
